# Terraforming-Azure

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tf-pipeline-checkin-dev.yml  tf-pipeline-checkin.yaml  tf-pipeline-checkin.yml  tf-pipeline-deploy-dev.yml  tf-pipeline-deploy-prod.yml  tf-pipeline-deploy-qa.yml  tf-pipeline-deploy-test.yml
Databricks/: CorruptData.py  FHVBases.py  FHVTaxi.py  GreenTaxi.py  MountDataLake.py  ReportNumberOfTrips.py  YellowTaxi.py
Databricks/AutoLoader/: AutoLoader - Sandbox.py
Databricks/Configs/: CorruptData.py
Databricks/Delta Live Tables/: FHVBases.py  YellowTaxi.py
Databricks/Facts/: FHVTaxi.py  GreenTaxi.py
Databricks/Orchestration/: OrchestrateTaxiServiceWorkflow.py
Databricks/Reports/: ReportNumberOfTrips.py
Databricks/StreamingTweets/: IngetEventHubs.py
Databricks/TaxiTripETL/Configs/: MountDataLake.py
Databricks/TaxiTripETL/Delta Live Tables/: FHVTaxi.py  GreenTaxi.py  ReportNumberOfTrips.py
Databricks/TaxiTripETL/Dimensions/: FHVBases.py
Databricks/TaxiTripETL/Facts/: YellowTaxi.py  YellowTaxi_ChangeDataFeed.py
Databricks/customers/: IngestFromCosmosDB.py  adhoc.py
scripts/: LoadBlobs_dlgen2.py  LoadFiles_dlgen2.py  TweetsEventHubs.py
tf/.github/workflows/: tf-pipeline-checkin.yaml
tf/CommonModules/ADF/: Outputs.tf  locals.tf  main.tf  variables.tf
tf/CommonModules/AppInsight/: Outputs.tf  locals.tf  main.tf
tf/CommonModules/AppServicePlan/: Outputs.tf  main.tf
tf/CommonModules/AzDevOpsServiceConn/: main.tf  (+3 more)
tf/TFPipelines/: checkin-staging.yaml  merge-dev.yaml  merge-qa.yaml
(+57 files in other folders)
