[tool.poetry]
name = "terraforming-azure"
version = "0.1.0"
description = ""
authors = ["MoeinT"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.12.0"
isort = "^5.11.4"
azure-storage-blob = "^12.14.1"
configparser = "^5.3.0"
azure-storage-file-datalake = "^12.9.1"
azure-identity = "^1.12.0"
tweepy = "^4.12.1"
azure-eventhub = "^5.11.1"
pytz = "^2022.7.1"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
